# codex-preflight

./: .gitignore  BUILD_WEEK.md  NOTICE  README.md  pyproject.toml
.codex-plugin/: plugin.json
case_corpus/: .codex-preflight-fixtures
codex_preflight_cli/: __init__.py  exec_wrapper.py  main.py  mcp_diagnostics.py  release_diagnostics.py
codex_preflight_core/: __init__.py  batch.py  corpus.py  preflight.py
codex_preflight_guardian/: __init__.py  explanation.py  guardian_context.py  plan_approval.py  pre_tool_use.py  remediation_plan.py  self_verification.py
codex_preflight_mcp/: __init__.py  contract.py  errors.py  remote_confirmation.py  remote_operation.py  remote_policy.py  remote_scan_worker.py  remote_state.py  runtime_compatibility.py  server.py  trust_mutation.py  trust_mutation_audit.py  trust_mutation_confirmation.py  trust_read.py  trust_state.py
demo_repos/: .codex-preflight-fixtures
docs/: 0.1.x-stabilization.md  0.2.x-version-plan.md  build-week-status.md  build-week-submission-checklist.md  build-week-video-script.md  bw5-accepted-plan-pass.md  bw5-accepted-plan-rerun.md  cache-design.md  case-corpus.md  codex-integration.md  comparison.md  external-repo-scan.md  indirect-execution-v1.3.md  mcp-client-examples.md  mcp-report-schema.md  mcp.md  plugin.md  portfolio-blurb.md  release-history.md  release-process.md  reports.md  rules.md  security-fixes-v1.2.1.md  threat-model.md
examples/: public-repos.yml
hooks/: hooks.json
runtime/: runtime-manifest.json
schemas/: guardian-explanation-v1.schema.json  guardian-plan-approval-v1.schema.json  guardian-remediation-plan-v1.schema.json
scripts/: build_plugin_runtime.py  codex_preflight_runtime.py  launch-mcp.mjs  merge_plugin_runtime.py  sync_marketplace_plugin.py
tests/: conftest.py  test_bw1_self_verification.py  test_cache_concurrency.py  test_ci_dependencies.py  test_command_self_risk.py  test_evidence_trust_boundary.py  test_git_metadata_boundary.py  test_guardian_context.py  test_guardian_explanation.py  test_guardian_plan_approval.py  test_guardian_plan_schemas.py  test_guardian_pre_tool_use_hook.py  test_java_kotlin_ecosystem.py  (+42 more)
(+245 files in other folders)
