[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-preflight"
version = "0.3.7"
description = "Local-first pre-execution repository risk scanner for Codex-style coding agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.20",
    "pytest>=8.2",
    "ruff>=0.5",
]
mcp = [
    "mcp>=1.3.0",
]

[project.scripts]
codex-preflight = "codex_preflight_cli.main:app"
codex-preflight-hook = "codex_preflight_guardian.pre_tool_use:main"
codex-preflight-mcp = "codex_preflight_mcp.server:main"

[tool.setuptools.packages.find]
include = ["codex_preflight_core*", "codex_preflight_cli*", "codex_preflight_guardian*", "codex_preflight_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
